Changes made based on Ogden's feedback from 11/6: Modified wording "manuscripts'" in Abstract; clarified Footnote #4 in Introduction about verse quotations; Added sentence to point #3 in Ch1 conclusion about future direction of edition; Added conclusion paragraph to Ch2; Added sentence to Excerpt of T-E in Ch2 about editorial judgment factoring into special character code selection (providing a footnote about 'poit[ri]ne' as an example); modified formatting for ([Im]material and [In]human) when mentioned parenthetically throughout the diss; These changes mean an update to the numbering of footnotes will be necessary.

--- a/chapter1.qmd
+++ b/chapter1.qmd
@@ -148,7 +148,7 @@ He goes on to argue that print editions are only *maybe* better than digital edi
 
 **2. Present the different historical forms of the text, and present the differences between the historical forms of the text:** Appendix 1 provides a thorough description and transmission history of each manuscript witness of Version T, placing each manuscript in context.
 
-**3. Explain the relationship between the different historical forms:**[^93] Chapter 3 of this dissertation focuses on comparing the T portraits across the corpus, illuminating textual variance and the literary implications of that variance in detail.
+**3. Explain the relationship between the different historical forms:**[^93] Chapter 3 of this dissertation focuses on comparing the T portraits across the corpus, illuminating textual variance and the literary implications of that variance in detail. Future iterations of this digital edition will take into account Version T in its entirety to provide a more complete explanation of the relationships between the T copies.
 
 **4. Explain how the editor edited:** While Chapter 1 has provided rationale for the use of digital methods and the format of a digital edition, Chapter 2 details my exact editing methods.
 
@@ -162,7 +162,7 @@ This dissertation embraces recent advancements in digital methods to try to achi
 [^54]: [](#ftnt_ref54) Initially, I was discouraged from taking my own pictures of the photographs because of the digitized images available, but after demonstrating the greater clarity my smartphone images provided me and the way in which I could better capture the physical scale of the photographs with my own images, I was permitted to take a few pictures for research purposes before the end of a too-brief visit.
 [^55]: [](#ftnt_ref55) Here, I borrow from Bolter and Grusin’s use of the term ‘remediation’ in *Remediation: Understanding New Media* (1999). They offer multiple definitions of the term, restating its logic in multiple ways, but particularly useful to keep in mind for this chapter they write, “Remediation as the mediation of mediation. Each act of mediation depends on other acts of mediation. Media are continually commenting on, reproducing, and replacing each other, and this process is integral to media. Media need each other in order to function as media at all” (55).
 [^56]: [](#ftnt_ref56) “Dig into the network of copying and transformation that binds together the digital copies, with their analog chromolithographic copies, with *their * analog manuscript copies, and it becomes clear that there are only copies of copies; each a unique object with its own story to tell about technology, transformation, transmission, and labor, generally uncredited and unseen.” (*Digital Codicology* xviii; Whearty’s emphasis)
-[^57]: [](#ftnt_ref57) The term ‘ghost’ is often used in relation to digital materials. I discuss its use in more detail below in the section “(Im)material and (In)human.”
+[^57]: [](#ftnt_ref57) The term ‘ghost’ is often used in relation to digital materials. I discuss its use in more detail below in the section '(Im)material and (In)human.'
 [^58]: [](#ftnt_ref58) In *The Fluid Text* (2002), John Bryant emphasizes the cultural value of perceiving texts as migratory, “What makes a fluid text fluid is its fluidity. This tautology is meant to stress an obvious point easily missed: When we read a fluid text, we are comparing the versions of a text, which is to say we are reading the differences between the versions, which is to say we are reading distance traveled, difference, and change. We are reading the energy of a culture that makes the change, an energy that has measurable meaning in our analysis of culture” (62-63).
 [^59]: [](#ftnt_ref59) Stephen G. Nichols criticizes the ‘chain analogy’ of textual transmission: “While it’s true that vernacular works were transmitted longitudinally throughout the Middle Ages, the process was stochastic and contingent, rather than orderly or symmetrical. … We should not be surprised, then, to discover that each manuscript version of a literary work had a story to tell about itself, a story conveying something about the social, economic, and cultural conditions leading to the creation of that particular manuscript and its choice of text(s). Viewed from this perspective, the manuscript is no less dynamic and complex, but the dynamism and complexity are distributed differently” (*From Parchment to Cyberspace* 57).
 [^60]: [](#ftnt_ref60) “Lost books and destroyed files *are * the long history of medieval manuscripts” (*Digital Codicology* 118; Whearty’s emphasis).
