--- a/chapter2.qmd
+++ b/chapter2.qmd
@@ -83,7 +83,9 @@ The multi-column design of this digital edition highlights the editorial process
 The primary aim of my text encoding strategy is to ensure that each editorial choice is clear and justifiable. Tagging is itself a process that forces us to very narrowly consider, label, and rationalize our choices as editors. Regardless of the editor’s choice of *how* to regularize the text, the fact that a revision has been made must be made obvious to the reader, thereby inviting curiosity and scrutiny ultimately to the betterment of the edition and our reading outcomes. As I argued in Chapter 1 (section 3. Ephemeral and Error-prone), when editions are designed for interrogation and interaction, manuscript studies as an endeavor becomes more reproducible and transparent but no less rigorous. The digital editing methods I have described here demand, rather than diminish, editorial effort. Far from inviting the ‘laziness’ critique once leveled against imitative or single-manuscript approaches, these methods set a higher standard of openness as we hold ourselves evermore accountable to the scrutiny of our readers.[^131] By meticulously tagging each intervention, the digital edition offered in Appendix 2 advances a higher degree of transparency and prompts a healthy level of scrutiny of my work, which — though carefully and thoughtfully executed — is sure to be colored by my subjective decision-making and unavoidable human propensity for error. This digital editing practice encourages readers to return to the source material of Version T whenever possible and to remain ever-critical of the influence of the modern editor.
 
 ## Excerpt of T-E (Portrait 2, vv.613-702)
-The selected verses below comprise the second portrait of Mary as she lives ascetically in the desert, a passage in which the T-E copyist inserts a few unique whole verses and word choices (vv.614, 650-652, 668, 676, & 700). I have selected the following passage of T-E to illustrate my digital editing methods on a smaller scale than the material featured in all of Appendix 2. I chose to isolate T-E here due to several unique aspects of this copy. First, T-E has received little attention as a witness of Version T because it is incomplete; approximately sixty verses are missing near the end of the narrative due to the mutilation of folio 117. If intact, T-E would provide the longest extant witness of Version T as well as the only miniature of Mary the Egyptian associated with T (now lost). Because T-E is a somewhat more difficult manuscript copy to read — featuring text that is highly abbreviated and inconsistent in word spacing — T-E more clearly demonstrates the benefit of my editorial approach which presents a transcription of T-E with increasing levels of editorial intervention. For this excerpt, I have also inserted special characters to represent the many scribal abbreviations present in the manuscript. These special characters have been selected in alignment with the recommendations of the Medieval Unicode Font Initiative (MUFI), a group of scholars and font designers committed to helping medievalists encode and display special characters found in medieval texts written in the Latin alphabet. Such special characters do not properly render in all fonts, but Junicode — a font developed by Peter Baker of the University of Virginia — has been designed for optimal compatibility with the MUFI guidelines. Thus, the Junicode font family has been applied to this entire dissertation project. The following directory specifies which codes have been used to render each of the special characters present in this excerpt of T-E, including screengrabs from the digitized manuscript for reference:
+The selected verses below comprise the second portrait of Mary as she lives ascetically in the desert, a passage in which the T-E copyist inserts a few unique whole verses and word choices (vv.614, 650-652, 668, 676, & 700). I have selected the following passage of T-E to illustrate my digital editing methods on a smaller scale than the material featured in all of Appendix 2. I chose to isolate T-E here due to several unique aspects of this copy. First, T-E has received little attention as a witness of Version T because it is incomplete; approximately sixty verses are missing near the end of the narrative due to the mutilation of folio 117. If intact, T-E would provide the longest extant witness of Version T as well as the only miniature of Mary the Egyptian associated with T (now lost). Because T-E is a somewhat more difficult manuscript copy to read — featuring text that is highly abbreviated and inconsistent in word spacing — T-E more clearly demonstrates the benefit of my editorial approach which presents a transcription of T-E with increasing levels of editorial intervention. 
+
+For this excerpt, I have also inserted special characters to represent the many scribal abbreviations present in the manuscript. Although the application of special character codes might seem like an objective process, it too requires careful editorial judgement in tricky cases.^[For example, the abbreviated word ‘poit[ri]ne’ featured below might initially appear to belong to the same category of special character as ‘m[o]lt’ (encoded with the combining grave accent). However, ‘poit[ri]ne’ appears three times in copy T-E, and in two of those occurences (vv.179 & 394 in T-E), the abbreviation mark applied by the scribe is clearly a vertical line. The abbreviation mark on ‘poit[ri]ne’ in this excerpt (v.643) seems to have been copied with a clumsy tilt, suggesting a scribal irregularity rather than a distinct abbreviation form.] These special characters have been selected in alignment with the recommendations of the Medieval Unicode Font Initiative (MUFI), a group of scholars and font designers committed to helping medievalists encode and display special characters found in medieval texts written in the Latin alphabet. Such special characters do not properly render in all fonts, but Junicode — a font developed by Peter Baker of the University of Virginia — has been designed for optimal compatibility with the MUFI guidelines. Thus, the Junicode font family has been applied to this entire dissertation project. The following directory specifies which codes have been used to render each of the special characters present in this excerpt of T-E, including screengrabs from the digitized manuscript for reference:
 
 ### Directory of Special Characters:[^132]
 +---------------------------------------------------------------------------------------+------------+------------------------------------------------------+--------------------------------+
@@ -194,22 +196,24 @@ convert_xml_to_html(
 :::
 
 # Part 2
-Appendix 2 of this dissertation offers more than 7,500 transcribed and encoded verses of Version T for the digital reader to consider, but to best serve the arguments of the dissertation, I have extracted Portraits 1 and 2 as case studies.[^133] Focusing on these passages and enhancing their presentation with visualization methods demonstrates more effectively the value of reading closely across the manuscript copies. As discussed in the Introduction to this dissertation (in sections ‘Why Version T?’ and ‘Cross-Copy Reading & The Difference It Makes’), most scholars rely on Dembowski’s print edition, which privileges copy T-A as its base text. This dependence has led to the relative neglect of the other T manuscripts and, consequently, to narrower interpretations of Version T. The digital presentation of the T portraits offered here in Part 2 of Chapter 2 instead promotes a cross-copy mode of reading, allowing readers to engage more readily with the full manuscript corpus — a practice I go on to model in Chapter 3. The remainder of this chapter details the technical methods used to render the T portraits digitally, including the design strategies employed to visualize textual variance across the copies. These visualizations make plain the forms of variation that print editions tend to obscure and advance the goal of accessibility as articulated in Chapter 1 (section 2. (Im)material and (In)human): accessibility understood not merely as the physical availability of source materials but as their intellectual legibility to a broader range of users.
+Appendix 2 of this dissertation offers more than 7,500 transcribed and encoded verses of Version T for the digital reader to consider, but to best serve the arguments of the dissertation, I have extracted Portraits 1 and 2 as case studies.[^133] Focusing on these passages and enhancing their presentation with visualization methods demonstrates more effectively the value of reading closely across the manuscript copies. As discussed in the Introduction to this dissertation (in sections ‘Why Version T?’ and ‘Cross-Copy Reading & The Difference It Makes’), most scholars rely on Dembowski’s print edition, which privileges copy T-A as its base text. This dependence has led to the relative neglect of the other T manuscripts and, consequently, to narrower interpretations of Version T. The digital presentation of the T portraits offered here in Part 2 of Chapter 2 instead promotes a cross-copy mode of reading, allowing readers to engage more readily with the full manuscript corpus — a practice I go on to model in Chapter 3. The remainder of this chapter details the technical methods used to render the T portraits digitally, including the design strategies employed to visualize textual variance across the copies. These visualizations make plain the forms of variation that print editions tend to obscure and advance the goal of accessibility as articulated in Chapter 1 (section 2. [Im]material and [In]human): accessibility understood not merely as the physical availability of source materials but as their intellectual legibility to a broader range of users.
 
 ## Methods: Authoring in Quarto (The Portraits)
 The visualizations of the T portraits presented here are made possible through the digital infrastructure on which this dissertation is built. This dissertation has been authored as a Quarto ‘book’ that outputs in HTML — a standard markup language (HyperText Markup Language) used to structure and display content on the web.[^134] I chose Quarto — a new open-source publishing system designed to help users produce dynamic content in a variety of formats — because of its interoperability and its lower barriers to entry for technical novices.[^135] While I have coded the edition of this dissertation in R with its primary output in HTML, Quarto allows scholars to author content in other languages — like Python or Julia — and to output their work in a variety of other formats (PDF, ePub, LaTeX, OpenDocument, Typist, etc.), allowing users to choose the conditions best suited for their expertise and research needs. I have similarly opted to use the text editors RStudio and Visual Studio Code (VS Code) to author this Quarto book because of both my own familiarity with these tools and the fact that they are all free, open-source, and widely-supported by a large community of users. Using this open, interoperable infrastructure directly supports the accessibility goals of this project. By relying on freely available tools, this project models a reproducible technical foundation that other humanities scholars can adapt to author digital editions of their own. In this way, accessibility in digital editing extends beyond the reader’s interface to include the editor’s process. Making the underlying infrastructure open, legible, and reproducible is part of the same commitment to transparency that guides the rest of this edition’s design.
 
-Rather than manipulating the underlying XML encoding of my transcriptions to present these portraits, I have taken advantage of the web development tools described above to mark up and style the portraits in two ways: first by simply presenting each of the T copies side-by-side on the page “The Portraits” and second by presenting them in parallel with added visual cues on the page “The Portraits (with Visualizations)”.
+Rather than manipulating the underlying XML encoding of my transcriptions to present these portraits, I have taken advantage of the web development tools described above to mark up and style the portraits in two ways: first by simply presenting each of the T copies side-by-side on the page 'The Portraits' and second by presenting them in parallel with added visual cues on the page 'The Portraits (with Visualizations).'
 
-The initial presentation mode (“The Portraits”) simply displays each of the T copies of the portraits side-by-side, with the ‘Extensive’ level of editorial intervention previously described in the first part of this chapter. On this page, no additional adjustments have been made to align these copies for easier cross-copy reading. Without closer inspection, the only readily apparent difference among these copies is their variant lengths, which may be observed by scrolling toward the bottom of the page. While this layout focuses the reader’s attention on the full passages most relevant to this dissertation, without any other added visual aids, recognizing the nuanced differences and meaningful consistencies across the T copies would require more deliberate study by the reader.
+The initial presentation mode ('The Portraits') simply displays each of the T copies of the portraits side-by-side, with the ‘Extensive’ level of editorial intervention previously described in the first part of this chapter. On this page, no additional adjustments have been made to align these copies for easier cross-copy reading. Without closer inspection, the only readily apparent difference among these copies is their variant lengths, which may be observed by scrolling toward the bottom of the page. While this layout focuses the reader’s attention on the full passages most relevant to this dissertation, without any other added visual aids, recognizing the nuanced differences and meaningful consistencies across the T copies would require more deliberate study by the reader.
 
-Alternatively, on the page “The Portraits (with Visualizations),” the portraits are again laid out side-by-side, but spacing has been adjusted to put each copy in parallel, making it easier to track patterns and changes across the copies. Verses that are lacking from each copy are indicated with red-gradient blocking, while sequence changes made by the scribe are blocked in yellow. Unique features (either whole verses or key words) have been highlighted in green, and negated phrasing and color imagery — poetic features of the portraits to be explored in Chapter 3 — have been highlighted in blue and purple respectively.[^136] Adding the parallel layout alone makes it immediately easier to see the absences, alterations, and additions present in each copy, and the addition of colorized visual cues draws the reader’s attention to areas of interest for comparison right away, highlighting otherwise subtle variations in word choice, sequence, and descriptive emphasis. The addition of blue and purple highlighting to underscore the use of negation and color imagery across the copies is perhaps uniquely helpful in the context of these portraits, as these poetic features may not be as important to highlight throughout the rest of the narrative, but in this context, these color annotations aid my reader in seeing more clearly the arguments made during the close reading of Chapter 3. Overall, the added visual cues on this page help the reader to more intuitively process the complications added by each of the T copies that would otherwise be nearly impossible to visualize and interpret from carefully cross-referencing the editorial notes of a traditional print edition alone.[^137]
+Alternatively, on the page 'The Portraits (with Visualizations),' the portraits are again laid out side-by-side, but spacing has been adjusted to put each copy in parallel, making it easier to track patterns and changes across the copies. Verses that are lacking from each copy are indicated with red-gradient blocking, while sequence changes made by the scribe are blocked in yellow. Unique features (either whole verses or key words) have been highlighted in green, and negated phrasing and color imagery — poetic features of the portraits to be explored in Chapter 3 — have been highlighted in blue and purple respectively.[^136] Adding the parallel layout alone makes it immediately easier to see the absences, alterations, and additions present in each copy, and the addition of colorized visual cues draws the reader’s attention to areas of interest for comparison right away, highlighting otherwise subtle variations in word choice, sequence, and descriptive emphasis. The addition of blue and purple highlighting to underscore the use of negation and color imagery across the copies is perhaps uniquely helpful in the context of these portraits, as these poetic features may not be as important to highlight throughout the rest of the narrative, but in this context, these color annotations aid my reader in seeing more clearly the arguments made during the close reading of Chapter 3. Overall, the added visual cues on this page help the reader to more intuitively process the complications added by each of the T copies that would otherwise be nearly impossible to visualize and interpret from carefully cross-referencing the editorial notes of a traditional print edition alone.[^137]
 
-Both presentation modes — the portraits with and without added visualizations — are enhanced by dynamic focus features, controlled through the CSS of this Quarto book, that affect the appearance of the text columns individually as the user hovers their cursor over them.[^138] When each text column is not actively moused over, the reader sees the Old French text — provided with the ‘Extensive’ level of editorial intervention — and when moused over, the English translations of the portraits of each T copy are revealed while the other text columns fade slightly. Offering the translations in this more dynamic way than one would typically find in the traditional facing-page layout of a print edition allows readers to more quickly toggle between the two languages without having to shift focus from one location on the page to another, maintaining focus on a single verse in both languages nearly simultaneously. Thus this dynamic styling addresses the inherent challenge of the human reader’s inability to read more than one thing at a time and encourages the modern reader to hold both languages in their mind as they read. Importantly, too, each English translation offered in this digital edition is unique to its copy, which further assists the modern reader in more immediately recognizing the variations present across the T copies even without extensive proficiency in Old French. This feature exemplifies, once again, the form of accessibility articulated in Chapter 1 (section 2. (Im)material and (In)human): accessibility as the rendering of materials intelligible to a wider range of readers. By providing a distinct translation for each manuscript copy, this digital format offers multiple points of entry for both established scholars and emerging learners of Old French.
+Both presentation modes — the portraits with and without added visualizations — are enhanced by dynamic focus features, controlled through the CSS of this Quarto book, that affect the appearance of the text columns individually as the user hovers their cursor over them.[^138] When each text column is not actively moused over, the reader sees the Old French text — provided with the ‘Extensive’ level of editorial intervention — and when moused over, the English translations of the portraits of each T copy are revealed while the other text columns fade slightly. Offering the translations in this more dynamic way than one would typically find in the traditional facing-page layout of a print edition allows readers to more quickly toggle between the two languages without having to shift focus from one location on the page to another, maintaining focus on a single verse in both languages nearly simultaneously. Thus this dynamic styling addresses the inherent challenge of the human reader’s inability to read more than one thing at a time and encourages the modern reader to hold both languages in their mind as they read. Importantly, too, each English translation offered in this digital edition is unique to its copy, which further assists the modern reader in more immediately recognizing the variations present across the T copies even without extensive proficiency in Old French. This feature exemplifies, once again, the form of accessibility articulated in Chapter 1 (section 2. [Im]material and [In]human): accessibility as the rendering of materials intelligible to a wider range of readers. By providing a distinct translation for each manuscript copy, this digital format offers multiple points of entry for both established scholars and emerging learners of Old French.
 
 In future iterations of this edition, I would like to enable readers to more easily compare individual whole copies with one another by adding more interactivity to the digital edition. With the current layout, it is not easy to compare copy T-A with copy T-E directly, for example, without opening each copy in separate browser windows.[^139] I would prefer a more dynamic layout that allows the digital reader to first choose which copies they would like to appear on the screen in parallel for closer inspection. Such a layout would allow readers to choose how complicated to make their own reading experience and would avoid prescribing any particular copy or hierarchy of copies to the reader as I have argued that all of the T copies are worthy of our attention.[^140] Regardless, the present digital edition of the T portraits, at the very least, spares the reader “the painful task of reconstituting” each copy from a list of variants and encourages a more careful cross-copy reading of Version T.[^141]
 
 My approach to these visualizations should not be considered objective. All color and pattern choices were applied manually and are intended to support my own close reading of the T portraits (Chapter 3). Stefan Jänicke and David Wrisley (2017), however, advocate for the use of computer-assisted analysis to help automate the study of *mouvance* at scale. Working with excerpts from a handful of copies of the *Chanson de Roland*, they employed statistical analysis to track variation not only at the verse-line level but also within individual lines — including changes in word order. To visualize this data, they propose the use of stream graphs, which offer a ‘meso-level’ view that balances computational analysis with the human reading experience. Notably, they identify *La Vie de sainte Marie l’Égyptienne* as a corpus particularly well suited to this method of analysis, especially for revealing patterns of textual reuse across versions. They do note, however, that the scale of the full French tradition of the *Vie* would pose technical challenges, such as the need for a large enough screen to accurately present such a massive visualization (ii113). Their study also highlights a major barrier to this kind of large-scale analysis: the scarcity of full digital transcriptions of medieval manuscript copies. “In the case of medieval French,” they observe, “we have only a few fully transcribed textual traditions [in] full” (ii107). This lack underscores the importance of producing and sharing more high-quality digital transcriptions like those produced for this dissertation (Appendix 2).[^142] And while large-scale computational models offer exciting possibilities for the future study of *mouvance*, meaningful inquiry does not depend on them. Small-scale, manually generated visualizations such as those presented here retain the nuance of human interpretation and invite readers to engage closely with the text itself. The visualizations I propose complement, rather than compete with, computational methods, demonstrating that the digital analysis of medieval writing need not be distant or impersonal to yield valuable insights.
+
+Combined, the methods detailed in this chapter demonstrate how digital editing can serve as both a critical and creative intervention in the study of medieval texts. By foregrounding the visibility of editorial decision-making, encoding texts in an interoperable form, and designing visualizations that highlight rather than dim variance, this edition models a practice that resists the illusion of a single, stable text. Instead, it invites readers to engage with textual instability as an interpretive opportunity. In this way, the project answers the call of the New Philology articulated in Chapter 1: it takes advantage of the digital medium as a means of advancing transparency, accessibility, reproducibility, and plurality. The edition and translations of Version T presented in this dissertation contribute to a growing body of work that reimagines editorial labor not as the production of a definitive text but as the creation of spaces for inquiry — spaces in which both continuity and variance become productively legible in the study of textual transmission. The following chapter builds on this foundation, demonstrating how the digital edition enables cross-copy reading and, in turn, a more meticulous understanding of the T corpus and its many representations of Mary the Egyptian.
 
 
 [^94]: [](#ftnt_ref94) In their guide *On Editing Old French Texts* (1979), Foulet and Speer note that the reader of any Old French text should always bear in mind that “in all likelihood, what he is reading is not actually the author’s composition but the result of hundreds of editorial decisions” (xv), and they sympathize with the editor who has the difficult task of formulating hard rules when each text offers special cases requiring unique treatment, “Handling such problems as variants and emendations calls for informed but necessarily subjective judgments” (xv).
