--- a/intro.qmd
+++ b/intro.qmd
@@ -148,7 +148,7 @@ Finally, as the entirety of this dissertation is presented as a digital document
 [^1]: [](#ftnt_ref1) Special Collections Manuscript Curator and Archivist at the John Rylands Library Elizabeth Gow kindly supplied me with a pdf scan of this letter via email on August 24th, 2024.
 [^2]: [](#ftnt_ref2) According to Gow, The John Rylands no longer has a microfilm copy of French 6, and Uppsala University is not in possession of such a microfilm or any of Rankka’s papers. Uppsala Special Collections Archivist Ina-Maria Jansson did, however, supply me with Rankka’s obituary, which describes Rankka’s commitment to editing and translating works of medieval French literature into Swedish through the later years of his life (personal correspondence via email 8-13 Aug 2024).
 [^3]: [](#ftnt_ref3) It is possible that Rankka was supplied with this same handlist, but he does not include it in the bibliography of his edition.
-[^4]: [](#ftnt_ref4) “Mais malement fu enseignie” (v.60). Unless otherwise indicated, all quotations of Version T in this dissertation will be taken from manuscript copy T-A (Paris, Bibliothèque nationale de France, Français 23112), which is the base text of Peter Dembowski’s edition of Version T in *La Vie de sainte Marie l’Égyptienne: Versions en ancien et en moyen français* (1977). The term ‘verse’ is used in this dissertation to refer to the the single metrical unit of poetry, and ‘line’ refers to a single row of text copied within a manuscript. All translations, unless otherwise stated, are my own.
+[^4]: [](#ftnt_ref4) “Mais malement fu enseignie” (v.60). Unless otherwise indicated, all quotations of Version T in this dissertation will be taken from manuscript copy T-A (Paris, Bibliothèque nationale de France, Français 23112), which is the base text of Peter Dembowski’s edition of Version T in *La Vie de sainte Marie l’Égyptienne: Versions en ancien et en moyen français* (1977). Although Dembowski’s edition closely follows the contents of T-A, the two are not identical. To ensure consistency and clarity — particularly for readers without access to Dembowski’s edition — verse quotations and numbering in this dissertation refer by default to my edited transcription of T-A, available in Appendix 2. The term ‘verse’ is used in this dissertation to refer to the the single metrical unit of poetry, and ‘line’ refers to a single row of text copied within a manuscript. All translations, unless otherwise stated, are my own.
 [^5]: [](#ftnt_ref5) “D’erbe vesqui & de rachines / Xvii. ans. par les gastines / Puis fu .xxx. ans onc ne manga / Se angeles ne li aporta” // “On grass she lived and on roots / for seventeen years in the wilderness. / Then for thirty years, she ate nothing / unless an angel brought it to her.” (vv.681-684)
 [^6]: [](#ftnt_ref6) “Ne ainc en trestot le boscaige / Ne li vint puis beste salvaige / Ne autre vive creature / Par le gaut va toute seure” // “Never in all the wood / did any wild beast come to her thereafter / nor any other living creature. / Through the forest, she goes totally assured.” (vv.695-698)
 [^7]: [](#ftnt_ref7) Version T is one of about a dozen versions in the French tradition alone. The other versions — as described by Dembowski — are X, V, W, N, O, O1, Z, U, Y, L1, L2, L3, and R. Version T is considered one of the earliest of these, dating at least to the late twelfth century according to Alfred T. Baker and confirmed by Dembowski (17). Version X was believed by Hermann Knust to be the source for T, but Paul Meyer correctly judged — according to Dembowski (17) — the inverse to be the case. Dembowski suggests X was likely written soon after T though probably near start of the thirteenth century (17). Version V, dating to the fifteenth century, likely derives from X as Dembowski notes the two share the unique accusation of incest as being among Mary the Egyptian’s many sins (18). Dembowski dates Version W — a short Anglo-Norman poem likely translated from a Latin source — to the end of the twelfth century, making it a rough contemporary of Version T (18). Dembowski repeats Hilding Kjellman’s assessment that Version N likely dates to somewhere between 1230 and 1250 based on a linguistic study of the collection of miracles of the Virgin in which N is included (19). Dembowski says that the N poet was likely following a Latin prose source, but he cannot exclude the possibility that the N poet had access to Version T too due to some resemblance between some of their verses (18-19). Version O is the translation of an unidentified Latin version of Sophronius and the primary source of Version R (19). Based on the linguistic evidence, Dembowski would not date Version O any later than 1250. Version O^1^ is a significantly abridged redaction of Version O, which Dembowski chose to feature separately “de ne pas trop encombrer l’appareil critique et ne pas le rendre à peu inutilisable” (20). According to Dembowski, Version Z is contemporary with O but was likely the translation of a simpler, more concise Latin text (20). Version U is of a similar type to O and Z — though less than half the length of O — dating to the second half of the thirteenth century (20-21). Version Y is about a third of the length of Version O and dates to the mid-fifteenth century (21). Finally, L^1^ , L^2^ , and L^3^ are French translations of the *Golden Legend* of Jacobus de Voragine (21) with L^1^ dating to the end of the thirteenth century (263), L^2^ to the second quarter of the fourteenth century (269), and L^3^ anterior to the fifteenth century (275).
